--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "next": "14.0.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "yup": "^1.3.3"
